--- a/src/pages/.github/workflows/deploy.yml
+++ b/src/pages/.github/workflows/deploy.yml
@@ -26,11 +26,11 @@ jobs:
 
       # Target 2: AWS S3
       - name: Deploy to AWS S3
-        uses: Burnett01/rsync-deployment@7.0.1
+        uses: Burnett01/rsync-deployments@7.0.1
         with:
           switches: -avzr --delete
           path: ./dist 
           remote_path: /var/www/metal-tracker/dist
           remote_host: 18.208.126.241
           remote_user: ubuntu
-          remote-key: ${{ secrets.EC2_SSH_KEY }}
+          remote_key: ${{ secrets.EC2_SSH_KEY }}
