--- a/src/pages/.github/workflows/deploy.yml
+++ b/src/pages/.github/workflows/deploy.yml
@@ -24,12 +24,12 @@ jobs:
           projectName: metal-tracker
           directory: dist
 
-      # Target 2: AWS S3
-      - name: Deploy to AWS S3
+      # Target 2: AWS EC2 (Changed name from S3 to avoid confusion)
+      - name: Deploy to AWS EC2
         uses: Burnett01/rsync-deployments@7.0.1
         with:
           switches: -avzr --delete
-          path: ./dist 
+          path: dist/ 
           remote_path: /var/www/metal-tracker/dist
           remote_host: 18.208.126.241
           remote_user: ubuntu
