--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,31 @@
-name: Dual deploy - cf pages and aws
+name: Deploy to Server
 
 on:
   push:
-    branches: [main]
-    
+    branches: [ main ]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v4
-
-      - name: Build Astro Site
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      
+      - name: Install and Build
         run: |
           npm install
           npm run build
-
-      # Target 1: Cloudflare pages
-      - name: Deploy to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+      
+      - name: Deploy to Server
+        uses: appleboy/scp-action@master
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: metal-tracker
-          directory: dist
-
-      # Target 2: AWS EC2 (Changed name from S3 to avoid confusion)
-      - name: Deploy to AWS EC2
-        uses: Burnett01/rsync-deployments@7.0.1
-        with:
-          switches: -avzr --delete
-          path: dist/ 
-          remote_path: /var/www/metal-tracker/dist
-          remote_host: 18.208.126.241
-          remote_user: ubuntu
-          remote_key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ubuntu
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "dist/*"
+          target: "/var/www/metal-tracker/"
+          strip_components: 1
